# programming_contest_challenge_book

./: .gitignore  CMakeLists.txt  README.md  make_file_list.sh
cmake/: algorithm.cmake  algorithm_test.cmake  chap2.cmake  chap2_test.cmake  chap3.cmake  chap3_test.cmake  chap4.cmake  chap4_test.cmake
cmake/cp/: chap01.cmake  chap01_test.cmake
src/algorithm/bucket_method/: README.md  k_th_number.cc  k_th_number.h  k_th_number_test.cc  range_minimum_query.cc  range_minimum_query.h  range_minimum_query_test.cc
src/algorithm/dynamic_programming/: README.md  traveling_by_stagecoach.cc  traveling_by_stagecoach.h  traveling_by_stagecoach_test.cc  traveling_salesman_problem.cc  traveling_salesman_problem.h  traveling_salesman_problem_test.cc
src/algorithm/graph/: README.md  ford_fulkerson.cc  ford_fulkerson.h  ford_fulkerson_test.cc  graph.cc  graph.h  graph_test.cc
src/algorithm/knapsack/: README.md  knapsack.cc  knapsack.h  knapsack_test.cc
src/algorithm/queue/: window_minimum.cc  window_minimum.h  window_minimum_test.cc
src/algorithm/segment_tree/: README.md  a_simple_problem_with_integers.cc  a_simple_problem_with_integers.h  a_simple_problem_with_integers_test.cc  binary_index_tree.cc  binary_index_tree.h  binary_index_tree_test.cc  crane.cc  crane.h  crane_test.cc  range_minimum_query.cc  range_minimum_query.h  range_minimum_query_test.cc  solve_count_bubble_sort.cc  solve_count_bubble_sort.h  solve_count_bubble_sort_test.cc
src/algorithm/selection/: README.md  median_of_medians.cc  median_of_medians.h  median_of_medians_test.cc
src/chap2/: bellman_ford.cc  bellman_ford_test.cc  binary_search_tree.h  binary_search_tree_test.cc  bipartite_graph.cc  bipartite_graph_test.cc  breadth_first_search.cc  breadth_first_search_test.cc  conscription.cc  conscription.h  conscription_test.cc  crazy_rows.cc  crazy_rows_test.cc  depth_first_search.cc  depth_first_search_test.cc  dijkstra.cc  dijkstra.h  dijkstra_test.cc  fence_repair.cc  fence_repair_test.cc  greedy_best_cow_line.cc  greedy_best_cow_line_test.cc  greedy_coin.cc  greedy_coin.h  greedy_coin_test.cc  greedy_scheduling.cc  greedy_scheduling_test.cc  gtest_helper.h  knapsack.cc  knapsack2.cc  knapsack2.h  knapsack2_test.cc  knapsack_test.cc  knapsack_with_duplication.cc  knapsack_with_duplication_test.cc  lake_counting.cc  lake_counting_test.cc  longest_common_subsequence.cc  longest_common_subsequence.h  longest_common_subsequence_test.cc  (+21 more)
src/chap2/gcj/: README.md  bribe_the_prisoners.cc  bribe_the_prisoners_test.cc
src/chap2/longest_increasing_subsequence/: README.md  longest_increasing_subsequence.cc  longest_increasing_subsequence.h  longest_increasing_subsequence_test.cc
src/chap2/minimum_spanning_tree/: README.md  conscription.cc  conscription_test.cc  minimum_spanning_tree.cc  minimum_spanning_tree_test.cc  roadblocks.cc  roadblocks.h  roadblocks_test.cc
src/chap2/number_of_combination/: number_of_combination.cc  number_of_combination_test.cc
src/chap2/number_of_partitioning_pattern/: README.md  number_of_partitioning_pattern.cc  number_of_partitioning_pattern_test.cc
src/chap3/: README.md  coordinate_compress.cc  coordinate_compress_test.cc
src/chap3/binary_search/: README.md  aggressive_cows.cc  aggressive_cows_test.cc  cable_master.cc  cable_master.h  cable_master_test.cc  lower_bound.cc  lower_bound.h  lower_bound_test.cc
src/chap3/two_pointer_technique/: README.md  face_the_right_way.cc  face_the_right_way.h  face_the_right_way_test.cc  fliptile.cc  fliptile_test.cc  four_values_whose_sum_is_0.cc  four_values_whose_sum_is_0_test.cc  jessica_reading_problem.cc  jessica_reading_problem_test.cc  physics_experiment.cc  physics_experiment_test.cc  subsequence.cc  subsequence.h  subsequence_test.cc
src/cp/chap01/: solve_matching.cc  solve_matching.h  solve_matching_test.cc
src/pccb/chap2/: README.md  bellman_ford.cc  bellman_ford.h  bellman_ford_test.cc  binary_search_tree.cc  bipartite_graph.cc  bipartite_graph.h  bipartite_graph_test.cc  breadth_first_search.cc  breadth_first_search.h  breadth_first_search_test.cc  crazy_rows.cc  crazy_rows.h  crazy_rows_test.cc  depth_first_search.cc  depth_first_search.h  depth_first_search_test.cc  dijkstra.cc  dijkstra.h  dijkstra_test.cc  fence_repair.cc  fence_repair.h  (+35 more)
src/util/: gtest_util.h
(+163 files in other folders)
